force-app/main/default/objects/LLC_BI__Institution__c/LLC_BI__Institution__c.object-meta.xml
<CustomObject>
    <description>This object organizes institution-specific data.</description>
    <label>Institution</label>
    <nameField>
        <label>Institution</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Institutions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>