force-app/main/default/objects/LLC_BI__Institution__c/fields/LLC_BI__Brand__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Use this lookup field to populate the name of the Brand used to style this Institution.</description>
    <label>Brand</label>
    <referenceTo>nFORCE__Brand__c</referenceTo>
    <relationshipLabel>Institutions</relationshipLabel>
    <relationshipName>Institutions</relationshipName>
    <type>Lookup</type>
</CustomField>