force-app/main/default/objects/LLC_BI__Institution__c/fields/LLC_BI__Community_Extension__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Community_Extension__c</fullName>
    <description>Manually populate this text field to store the Community&apos;s extension.</description>
    <label>Community Extension</label>
    <length>250</length>
    <type>Text</type>
</CustomField>