force-app/main/default/objects/LLC_BI__Institution__c/fields/LLC_BI__Community_Name__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Community_Name__c</fullName>
    <description>Manually populate this text field with the name of the Community for this Institution.</description>
    <label>Community Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>