force-app/main/default/objects/LLC_BI__Institution__c/fields/LLC_BI__Community_Network_ID__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Community_Network_ID__c</fullName>
    <description>Manually populate this text field to store the Community Network ID.</description>
    <label>Community Network ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>