force-app/main/default/objects/LLC_BI__Institution__c/fields/LLC_BI__LookupKey__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__LookupKey__c</fullName>
    <description>-DEPRECATED- Deprecated field, no longer in use, replaced by Look_Up_Key__c</description>
    <label>-D Lookup Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>