force-app/main/default/objects/LLC_BI__Institution__c/fields/LLC_BI__Permission_Set__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Permission_Set__c</fullName>
    <description>Populate this text field with the API name of the permission set used to assign nCino Community Users access to a specific institution.</description>
    <inlineHelpText>Enter the API name of the permission set used to assign nCino Community Users access to a specific institution.</inlineHelpText>
    <label>Permission Set</label>
    <length>250</length>
    <type>Text</type>
</CustomField>